--- a/templates/auth.html
+++ b/templates/auth.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href={% static 'img/favicon.ico' %}>
     <title>Foodplan 2021 - Меню на неделю FOODPLAN</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.8d8f24edbb5f.svg" height="55" width="189" alt="">
+                    <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse1"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
         <section>
             <div class="container">
                 <div class="card p-3 mb-5 foodplan__shadow">
-                    <a href="#" class="link-secondary fw-light foodplan__backButton">
+                    <a href="{% url 'index' %}" class="link-secondary fw-light foodplan__backButton">
                         <svg xmlns="http://www.w3.org/2000/svg" width="9%" height="9%" fill="currentColor" class="bi bi-arrow-left-circle"
                             viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
@@ -66,7 +67,7 @@
                                     class="btn w-100 btn-outline-success shadow-none foodplan_green foodplan__border_green">Войти</button>
                             </div>
                             <div class="col-12 col-sm-6 mt-3 d-flex justify-content-center align-items-center">
-                                <small>Нет аккаунта? <a href="#" class="link-dark foodplan_green">Зарегистрируйтесь</a></small>
+                                <small>Нет аккаунта? <a href="{% url 'registration' %}" class="link-dark foodplan_green">Зарегистрируйтесь</a></small>
                             </div>
                         </div>
                     </form>
@@ -78,11 +79,11 @@
         <nav class="navbar navbar-expand-md navbar-light mt-5">
             <div class="container p-2">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.8d8f24edbb5f.svg" height="55" width="189" alt="">
+                    <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
                     <a href="#">
-                        <img src="img/vk.png" height="38" width="auto" alt="">
+                        <img src={% static 'img/vk.png' %} height="38" width="auto" alt="">
                     </a>
                 </div>
             </div>
