--- a/templates/auth.html
+++ b/templates/auth.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{% url "index" %}">
                     <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse1"
@@ -26,7 +26,9 @@
                     <ul class="navbar-nav w-100">
                         
                         <li class="nav-item align-items-center d-md-flex flex-grow-1 justify-content-end">
-                            <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green">Подписка</button>
+                            <a href="{% url "subscribe" %}">
+                                <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green">Подписка</button>
+                            </a>
                             <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Войти</button>
                         </li>
                     </ul>
@@ -78,11 +80,11 @@
     <footer>
         <nav class="navbar navbar-expand-md navbar-light mt-5">
             <div class="container p-2">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{% url "index" %}">
                     <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
-                    <a href="#">
+                    <a href="https://vk.com/devmanorg">
                         <img src={% static 'img/vk.png' %} height="38" width="auto" alt="">
                     </a>
                 </div>
