--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Foodplan 2021 - Меню на неделю FOODPLAN</title>
 </head>
 
@@ -27,7 +28,9 @@
                         
                         <li class="nav-item align-items-center d-md-flex flex-grow-1 justify-content-end">
                             <button class="btn shadow-none btn-outline-success me-2 foodplan_green foodplan__border_green">Подписка</button>
-                            <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
+                            <a href='{% url 'auth' %}'
+                                <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +74,7 @@
                                 <button type="submit" class="btn  shadow-nonew-100 btn-outline-success foodplan_green foodplan__border_green">Регистрация</button>
                             </div>
                             <div class="col-12 col-sm-6 mt-3 d-flex justify-content-center align-items-center">
-                                <small>Уже есть аккаунт? <a href="#" class="link-dark foodplan_green">Войти</a></small>
+                                <small>Уже есть аккаунт? <a href="{% url "auth" %}" class="link-dark foodplan_green">Войти</a></small>
                             </div>
                         </div>
                     </form>
@@ -86,7 +89,7 @@
                     <img src="img/logo.8d8f24edbb5f.svg" height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
-                    <a href="#">
+                    <a href="https://vk.com/devmanorg" target="_blank" rel="noopener">
                         <img src="img/vk.png" height="38" width="auto" alt="">
                     </a>
                 </div>
