--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load myfilter %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,7 +42,7 @@
         <section>
             <div class="container">
                 <div class="card p-3 mb-5 foodplan__shadow">
-                    <a href="#" class="link-secondary fw-light foodplan__backButton">
+                    <a href="{% url "auth" %}" class="link-secondary fw-light foodplan__backButton">
                         <svg xmlns="http://www.w3.org/2000/svg" width="9%" height="9%" fill="currentColor" class="bi bi-arrow-left-circle"
                             viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
@@ -51,24 +52,36 @@
                     <h2 class="text-center"><strong>Авторизация</strong></h2>
                 </div>
                 <div class="card px-5 py-3 d-flex align-items-center foodplan__shadow">
-                    <form>
+                    <form method="post">
+                        {% csrf_token %}
                         <h1 class="mb-4 text-center"><strong>Регистрация</strong></h1>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Имя</label>
-                            <input type="text" class="form-control" id="name">
+                            {{ form.username|addclass:"form-control" }}
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            {{ form.email|addclass:"form-control" }}
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" id="password">
+                            {{ form.password1|addclass:"form-control" }}
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Подтверждение пароля</label>
-                            <input type="password" class="form-control" id="PasswordConfirm">
+                            {{ form.password2|addclass:"form-control" }}
                         </div>
+                        {% for field in form %}
+	                        <p>
+		                        {% if field.errors %}
+		                            <ul class="errorlist">
+			                            {% for error in field.errors %}
+			                                <li>{{ error }}</li>
+			                            {% endfor %}
+		                            </ul>
+		                        {% endif %}
+	                        </p>
+	                    {% endfor %}
                         <div class="row mb-3">
                             <div class="col-12 col-sm-6 mt-3">
                                 <button type="submit" class="btn  shadow-nonew-100 btn-outline-success foodplan_green foodplan__border_green">Регистрация</button>
