Changed index header

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,15 @@
                 <a class="navbar-brand" href="{% url "index" %}">
                     <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
-                <a href='{% url 'auth' %}'
-                    <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
-                </a>
+                {% if auth %}
+                    <a href='{% url 'lk' %}'
+                        <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Личный кабинет</button>
+                    </a>
+                {% else %}
+                    <a href='{% url 'auth' %}'
+                        <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
+                    </a>
+                {% endif %}
             </div>
         </nav>
     </header>
