--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load myfilter %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,18 +51,19 @@
                     <h2 class="text-center"><strong>Авторизация</strong></h2>
                 </div>
                 <div class="card px-5 py-3 d-flex align-items-center foodplan__shadow">
-                    <form>
+                    <form method="post">
+                        {% csrf_token %}
                         <h1 class="mb-4 text-center"><strong>Вход</strong></h1>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <label for="exampleInputEmail1" class="form-label">Логин</label>
+                            {{ form.username|addclass:"form-control" }}
                         </div>
                         <div class="mb-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <label for="exampleInputPassword1" class="form-label">Пароль</label>
                                 <small><a href="#" class="link-dark foodplan_green">Забыли пароль?</a></small>
                             </div>
-                            <input type="password" class="form-control" id="password">
+                            {{ form.password|addclass:"form-control" }}
                         </div>
                         <div class="row mb-3">
                             <div class="col-12 col-sm-6 mt-3">
