--- a/templates/lk.html
+++ b/templates/lk.html
@@ -19,7 +19,9 @@
                 <a class="navbar-brand" href="{% url "index" %}">
                     <img src="{% static "img/logo.8d8f24edbb5f.svg" %}" height="55" width="189" alt="">
                 </a>
-                <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                <a href="{% url "logout" %}"
+                    <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                </a>
             </div>
         </nav>
     </header>
