--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
                     <img src={% static 'img/logo.8d8f24edbb5f.svg' %} height="55" width="189" alt="">
                 </a>
                 {% if auth %}
-                    <a href='{% url 'lk' %}'
+                    <a href='{% url 'lk' %}'>
                         <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Личный кабинет</button>
                     </a>
                 {% else %}
-                    <a href='{% url 'auth' %}'
+                    <a href='{% url 'auth' %}'>
                         <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
                     </a>
                 {% endif %}
@@ -88,34 +88,19 @@
                 <div class="container w-md-75">
                     <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src={% static 'img/1.jpg' %} class="d-block w-100" alt="...">
+                            {% for recipe in recipes %}
+                                {% if forloop.first %}
+                                    <div class="carousel-item active">
+                                {% else %}
+                                    <div class="carousel-item">
+                                {% endif %}
+                                <img src="{{ MEDIA_URL }}{{ recipe.image|urlencode }}" class="d-block w-100" alt="...">
                                 <div class="card-img-overlay text-white text-center carousel-item__gradient">
                                     <h5><b>Модный и полезный ужин</b></h5>
-                                    <h2><b>Боул с креветками и рисом</b></h2>
+                                    <h2><b>{{ recipe.name }}</b></h2>
                                 </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src={% static 'img/2.jpg' %} class="d-block w-100" alt="...">
-                                <div class="card-img-overlay text-white text-center carousel-item__gradient">
-                                    <h5><b>Интересно, просто и супер вкусно</b></h5>
-                                    <h2><b>Тосканский суп с фаршем</b></h2>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src={% static 'img/3.jpg' %} class="d-block w-100" alt="...">
-                                <div class="card-img-overlay text-white text-center carousel-item__gradient">
-                                    <h5><b>Понятное всей семье, яркое на вкус</b></h5>
-                                    <h2><b>Паприкаш с курицей</b></h2>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img src={% static 'img/4.jpg' %} class="d-block w-100" alt="...">
-                                <div class="card-img-overlay text-white text-center carousel-item__gradient">
-                                    <h5></h5><b>Летнее удовольствие</b></h5>
-                                    <h2><b>Овощной салат с жареным халуми</b></h2>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                         <button class="carousel-control-prev carousel__button_prev" type="button" data-bs-target="#carousel1"
                             data-bs-slide="prev">
