--- a/templates/order.html
+++ b/templates/order.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load myfilter %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,14 +14,25 @@
     <link rel="icon" type="image/x-icon" href={% static 'img/favicon.ico' %}>
     <title>Foodplan 2021 - Меню на неделю FOODPLAN</title>
 </head>
-<body>
+<body onpageshow="calculate()">
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
             <div class="container">
                 <a class="navbar-brand" href="{% url "index" %}">
                     <img src="{% static "img/logo.8d8f24edbb5f.svg" %}" height="55" width="189" alt="">
                 </a>
-                <h3 class="text-secondary mt-2 me-2">Стоимость: 00000₽</h3>
+                <h3 id="total_price" class="text-secondary mt-2 me-2">Выберите параметры подписки</h3>
+                <script>
+                    function calculate(){
+                        dietCost = Number(document.getElementById("period").value);
+                        total = dietCost;
+                        if (total > 0){
+                            document.getElementById("total_price").innerHTML = total;
+                        } else {
+                            document.getElementById("total_price").innerHTML = ("Выберите параметры подписки");
+                        }
+                    }
+                </script>
                 <button form="order" type="submit" class="btn shadow-none btn-sm btn-outline-success foodplan_green foodplan__border_green">Оплатить</button>
             </div>
         </nav>
@@ -64,108 +77,34 @@
                     </div>
                 </div>
                 <h2><strong>Выберите подходящий тариф</strong></h2>
-                <form id="order">
+                <form id="order" method="post">
+                {% csrf_token %}
                 <table class="table text-center text-truncate mb-5">
                     <tbody>
                         <tr>
                             <th scope="row" class="text-start">Срок</th>
                             <td>
-                                <select class="form-select">
-                                    <option value="0" selected>1 мес.</option>
-                                    <option value="1">3 мес.</option>
-                                    <option value="2">6 мес.</option>
-                                    <option value="3">12 мес.</option>
-                                </select>
+                                {{ form.period|addclass:"form-select" }}
                             </td>
                         </tr>
                         <tr>
-                            <th scope="row" class="text-start">Завтраки</th>
+                            <th scope="row" class="text-start">Приемы пищи</th>
                             <td>
-                                <select name="select1" class="form-select">
-                                    <option value="0" selected>&#10004;</option>
-                                    <option value="1">&#10008;</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Обеды</th>
-                            <td>
-                                <select name="select2" class="form-select">
-                                    <option value="0" selected>&#10004;</option>
-                                    <option value="1">&#10008;</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Ужины</th>
-                            <td>
-                                <select name="select3" class="form-select">
-                                    <option value="0" selected>&#10004;</option>
-                                    <option value="1">&#10008;</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Десерты</th>
-                            <td>
-                                <select name="select4" class="form-select">
-                                    <option value="0" selected>&#10004;</option>
-                                    <option value="1">&#10008;</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Кол-во персон</th>
-                            <td>
-                                <select name="select5" class="form-select">
-                                    <option value="0" selected>1</option>
-                                    <option value="1">2</option>
-                                    <option value="2">3</option>
-                                    <option value="3">4</option>
-                                    <option value="4">5</option>
-                                    <option value="5">6</option>
-                                </select>
+                                {% for meal_type in form.meal_types %}
+                                <div class="form-check d-flex justify-content-start">
+                                    <div>{{ meal_type }}</div>
+                                </div>
+                                {% endfor %}
                             </td>
                         </tr>
                         <tr>
                             <th scope="row" class="text-start">Аллергии</th>
                             <td>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy1">
-                                    <label class="form-check-label" for="allergy1">
-                                        Рыба и морепродукты
-                                    </label>
-                                </div>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy2">
-                                    <label class="form-check-label" for="allergy2">
-                                        Мясо
-                                    </label>
-                                </div>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy3">
-                                    <label class="form-check-label" for="allergy3">
-                                        Зерновые
-                                    </label>
-                                </div>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy3">
-                                    <label class="form-check-label" for="allergy3">
-                                        Продукты пчеловодства
-                                    </label>
-                                </div>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy3">
-                                    <label class="form-check-label" for="allergy3">
-                                        Орехи и бобовые
-                                    </label>
-                                </div>
-                                <div class="form-check d-flex justify-content-start">
-                                    <input class="form-check-input me-1 foodplan_checked-green" type="checkbox" value="" name="allergy3">
-                                    <label class="form-check-label" for="allergy3">
-                                        Молочные продукты
-                                    </label>
-                                </div>
+                                {% for allergy_type in form.allergy_types %}
+                                    <div class="form-check d-flex justify-content-start">
+                                        <div>{{ allergy_type }}</div>
+                                    </div>
+                                {% endfor %}
                             </td>
                         </tr>
                     </tbody>
